--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -3,5 +3,16 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
+  img {
+    width: 30%;
+    border-radius: 50%;
+  }
+  h2 {
+    padding: 3rem 1rem 1rem 1rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
 }
