--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -27,3 +27,11 @@
     cursor: pointer;
   }
 }
+@media screen and (max-width: 768px) {
+  .time-control {
+    width: 90%;
+  }
+  .play-control {
+    width: 60%;
+  }
+}
